--- a/taple_test.html
+++ b/taple_test.html
@@ -12,7 +12,7 @@
     <form style="margin-top: 10px; margin-bottom: 10px;" id="taple_input_form">
       <div style="position: relative: width: 100px; border-radius: 5px; padding: 5px; color: #ddd; background: #333;">
         <textarea id="taple_input" style="border: 0px; background: transparent; color: inherit; width:100%; overflow: hidden"></textarea>
-        <input type="submit" value="execute!"/>
+        <input type="submit" value="execute!"/> <span>or <span style="font-family: monospace">ctrl+enter</span></span>
       </div>
     </form>
     <div id="taple_console"></div>
