--- a/taple_test.html
+++ b/taple_test.html
@@ -3,6 +3,7 @@
   <head>
     <title>TAPLE TEST PAGE</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <style>a:link { color: inherit; } a:visited { color: inherit; } a:active { color: inherit; } a:hover { color: inherit; }</style>
     <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="taple_parser.js"></script>
     <script type="text/javascript" src="taple2js.js"></script>
@@ -13,6 +14,7 @@
       <div style="position: relative: width: 100px; border-radius: 5px; padding: 5px; color: #ddd; background: #333;">
         <textarea id="taple_input" style="border: 0px; background: transparent; color: inherit; width:100%; overflow: hidden"></textarea>
         <input type="submit" value="execute!"/> <span>or <span style="font-family: monospace">ctrl+enter</span></span>
+        <div>Examples: <a class="sample-code" href="examples/1.ss">gcd</a></div>
       </div>
     </form>
     <div id="taple_console"></div>
