--- a/taple_test.html
+++ b/taple_test.html
@@ -5,8 +5,9 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <style>a:link { color: inherit; } a:visited { color: inherit; } a:active { color: inherit; } a:hover { color: inherit; }</style>
     <script type="text/javascript" src="jquery.min.js"></script>
-    <script type="text/javascript" src="taple_parser.js"></script>
-    <script type="text/javascript" src="taple2js.js"></script>
+    <script type="text/javascript" src="texpr_parser.js"></script>
+    <script type="text/javascript" src="taple_comp.js"></script>
+    <script type="text/javascript" src="taple_rt.js"></script>
     <script type="text/javascript" src="taple_web.js"></script>    
   </head>
   <body>
